--- a/PO.html
+++ b/PO.html
@@ -109,30 +109,30 @@ body {
         <a class="nav-link" style="color: #A9A9A9;" href="index.html">Главная<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-secondary" href="index.html#about">О нас</a>
+        <a class="nav-link " style="color: #A9A9A9;"  href="index.html#about">О нас</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-secondary " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle " style="color: #A9A9A9;"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Коботы
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item text-secondary " href="#">QR-1</a>
-          <a class="dropdown-item disabled text-secondary " href="#">QR-2</a>
+          <a class="dropdown-item " style="color: #A9A9A9;"  href="#">QR-1</a>
+          <a class="dropdown-item disabled " style="color: #A9A9A9;"  href="#">QR-2</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item text-secondary " href="#">Документация</a>
-          <a class="dropdown-item text-secondary " href="#"></a>
+          <a class="dropdown-item  " style="color: #A9A9A9;"  href="#">Документация</a>
+          <a class="dropdown-item  " href="#"></a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-secondary " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle  " style="color: #A9A9A9;"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           ПО
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item text-secondary " href="PO.html">Загрузить ПО</a>
-          <a class="dropdown-item disabled text-secondary " href="#">Документация к ПО</a>
+          <a class="dropdown-item  " style="color: #A9A9A9;"  href="PO.html">Загрузить ПО</a>
+          <a class="dropdown-item disabled  " style="color: #A9A9A9;"  href="#">Документация к ПО</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item text-secondary " href="#">Дополнительное ПО</a>
-          <a class="dropdown-item text-secondary " href="#"></a>
+          <a class="dropdown-item  " style="color: #A9A9A9;"  href="#">Дополнительное ПО</a>
+          <a class="dropdown-item " style="color: #A9A9A9;"  href="#"></a>
         </div>
       </li>
 
