--- a/index.html
+++ b/index.html
@@ -275,10 +275,7 @@ body {
         <div class="col-6 col-md">
           <h5 class="text-light">Контакты</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Почта</a></li>
-            <li><a class="text-muted" href="#">Телеграмм</a></li>
-            <li><a class="text-muted" href="#">Инстаграмм</a></li>
-            <li><a class="text-muted" href="#">Вк</a></li>
+            <li><a class="text-muted" href="mailto:iv.no.270505@mail.ru">Почта</a></li>
           </ul>
         </div>
         <div class="col-6 col-md">
