--- a/PO.html
+++ b/PO.html
@@ -146,13 +146,31 @@ body {
       <div class="jumbotron" style="background: rgba(52, 58, 64, .5);">
         <h1 style="color: #ff6400">Последняя версия</h1>
         <p class="lead">Здесь можно загрузить установщик последней версии. Если Вам нужна более ранняя версия, смотрите ниже.»</p>
-        <a class="btn btn-lg btn-light" href="https://disk.yandex.ru/d/u1mnWix3Hja85w" role="button">Скачать ПО</a>
+        <a class="btn btn-lg btn-light" href="https://disk.yandex.ru/d/u1mnWix3Hja85w" role="button">Скачать ПО 1.0</a>
+          <p> </p>
+        <a class="btn btn-lg btn-dark text-secondary" href="https://disk.yandex.ru/d/Yxcog0eZjfXlcw" role="button">~ПРЕ-РЕЛИЗ~ Скачать ПО 1.1</a>
       </div>
     </main>
 <main role="main" class="container">
       <div class="row">
         <div class="col-md-8 blog-main">
 
+            <div class="blog-post text-dark">
+            <h2 style="color: #602600" class="blog-post-title">1.1 версия ~ПРЕ-РЕЛИЗ~</h2>
+            <p class="blog-post-meta">Декабрь 19, 2021</p>
+
+            <p>Доработка версии 1.0</p>
+
+            <h3>Что реализовано</h3>
+            <p>Следующие функции реализованы:</p>
+            <ul>
+              <li>Разработана система управления подключенным к коботу устройством.</li>
+              <li>Оканчательно реализована функция темного режима.</li>
+              <li>Оканчательно реализована функция светлого режима.</li>
+              <li>Переработаны все иконки приложения.</li>
+            </ul>
+
+          </div><!-- /.blog-post -->
 
           <div class="blog-post">
             <h2 style="color: #ff6400" class="blog-post-title">1.0 версия</h2>
@@ -192,7 +210,8 @@ body {
           <div class="p-3">
             <h4 class="font-italic">Версии:</h4>
             <ol class="list-unstyled mb-0">
-              <li><a href="https://disk.yandex.ru/d/u1mnWix3Hja85w" style="color: #ff6400">Декабрь 2021</a></li>
+              <li><a href="https://disk.yandex.ru/d/Yxcog0eZjfXlcw" style="color: #ff6400">1.1 Декабрь 2021 ~ПРЕ-РЕЛИЗ~</a></li>
+              <li><a href="https://disk.yandex.ru/d/u1mnWix3Hja85w" style="color: #ff6400">1.0 Декабрь 2021</a></li>
             </ol>
           </div>
 
@@ -212,10 +231,7 @@ body {
         <div class="col-6 col-md">
           <h5 class="text-light">Контакты</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Почта</a></li>
-            <li><a class="text-muted" href="#">Телеграмм</a></li>
-            <li><a class="text-muted" href="#">Инстаграмм</a></li>
-            <li><a class="text-muted" href="#">Вк</a></li>
+            <li><a class="text-muted" href="mailto:iv.no.270505@mail.ru">Почта</a></li>
           </ul>
         </div>
         <div class="col-6 col-md">
@@ -265,3 +281,6 @@ body {
 <div class="follow-cursor"></div>
   </body>
 </html>
+
+
+
