--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ body {
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" style="color: #A9A9A9;"  href="PO.html">Загрузить ПО</a>
-          <a class="dropdown-item disabled " style="color: #A9A9A9;"  href="#">Документация к ПО</a>
+          <a class="dropdown-item disabled " style="color: #A9A9A9;"  href="PO_doc.html">Документация к ПО</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item "  style="color: #A9A9A9;" href="#">Дополнительное ПО</a>
           <a class="dropdown-item "  style="color: #A9A9A9;" href="#"></a>
@@ -266,6 +266,7 @@ body {
 
 
 
+<a name="contact"></a>
 <footer class="container border-top pt-5 mt-5">
       <div class="row">
         <div class="col-12 col-md">
