--- a/PO.html
+++ b/PO.html
@@ -231,7 +231,7 @@ body {
         <div class="col-6 col-md">
           <h5 class="text-light">Контакты</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="mailto:iv.no.270505@mail.ru">Почта</a></li>
+            <li><a class="text-muted" href="mailto:qualityrobotics@yandex.ru">Почта</a></li>
           </ul>
         </div>
         <div class="col-6 col-md">
