--- a/firmware.html
+++ b/firmware.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="yandex-verification" content="978e93cfe43eb8c3" />
     <meta name="google-site-verification" content="IQJemOatH5_Zcuhst_eu3QGsH5TwZO3OGRfQmvDfHfM" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,14 +12,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" href="assets/img/QuRologo.png" type="image/x-icon">
-    <title>QuRo — производственная и образовательная робототехника.</title>
+    <title>QuRo</title>
 
      <style>
 
         html, body {
             background-color: #040404;
+            color: #fff;
         }
-
 body {
   font-family: 'Roboto', sans-serif;
   position: relative;
@@ -89,23 +90,11 @@ body {
 @media (max-width: 991.98px) {
   .follow-cursor {
     display: none;
-  }}
-
-#neon {
-  color: #fff;
-  text-shadow:
-    0 0 10px #fff;
-}
-
-#neon1 {
-  color: #ff6400;
-  text-shadow:
-    0 0 10px #ff6400;
+  }
 }
     </style>
   </head>
   <body>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
   <a class="navbar-brand " href="index.html" style="color: #ff6400">
   <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -120,30 +109,30 @@ body {
         <a class="nav-link" style="color: #A9A9A9;" href="index.html">Главная<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" style="color: #A9A9A9;"  href="index.html#about">О нас</a>
+        <a class="nav-link " style="color: #A9A9A9;"  href="index.html#about">О нас</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle "  style="color: #A9A9A9;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle " style="color: #A9A9A9;"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Коботы
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" style="color: #A9A9A9;"  href="#">QR-1</a>
-          <a class="dropdown-item disabled" style="color: #A9A9A9;"  href="#">QR-2</a>
+          <a class="dropdown-item " style="color: #A9A9A9;"  href="#">QR-1</a>
+          <a class="dropdown-item disabled " style="color: #A9A9A9;"  href="#">QR-2</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item"  style="color: #A9A9A9;" href="#">Документация</a>
-          <a class="dropdown-item" style="color: #A9A9A9;"  href="#"></a>
+          <a class="dropdown-item  " style="color: #A9A9A9;"  href="#">Документация</a>
+          <a class="dropdown-item  " href="#"></a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle"  style="color: #A9A9A9;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle  " style="color: #A9A9A9;"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           ПО
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" style="color: #A9A9A9;"  href="PO.html">Загрузить ПО</a>
-          <a class="dropdown-item disabled" style="color: #A9A9A9;"  href="PO_doc.html">Документация к ПО</a>
+          <a class="dropdown-item  " style="color: #A9A9A9;"  href="PO.html">Загрузить ПО</a>
+          <a class="dropdown-item disabled  " style="color: #A9A9A9;"  href="#">Документация к ПО</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item"  style="color: #A9A9A9;" href="firmware.html">Прошивка для кобота</a>
-          <a class="dropdown-item"  style="color: #A9A9A9;" href="#"></a>
+          <a class="dropdown-item  " style="color: #A9A9A9;"  href="#">Дополнительное ПО</a>
+          <a class="dropdown-item " style="color: #A9A9A9;"  href="#"></a>
         </div>
       </li>
 
@@ -152,95 +141,75 @@ body {
   </div>
   </nav>
 
-  <div style="height: 80vh" >
-  <div class="container-fluid d-flex h-100 justify-content-center align-items-center">
-      <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 font-weight-normal"><span id="neon">Добро пожаловать в </span><span id="neon1">QuRo</span></h1>
-        <!--<p class="lead font-weight-normal pt-4">Производственная и образовательная робототехника.</p>-->
-        <p id="demo" class="lead font-weight-normal pt-4 text-secondary"></p>
-        <div id="typed-strings">
-  <!-- Сюда помещаем текст для вывода -->
-</div>
-<span id="typed" style="white-space: pre;"></span>
+<div>
+<main role="main" class="container mt-4">
+      <div class="jumbotron" style="background: rgba(52, 58, 64, .5);">
+        <h1 style="color: #ff6400">Последняя версия</h1>
+        <p class="lead">Здесь можно загрузить последнюю версию прошивки для коллаборативного робота. Внимание! прошивка является дополнительным программым обеспечением и необходима только в случае поломки, либо при желании неординарного взаимодействия с коботом.</p>
+        <a class="btn btn-lg btn-light" href="https://disk.yandex.ru/d/f-qqGYvct5keYQ" role="button">Скачать прошивку 1.1</a>
       </div>
-    </div>
-</div>
-<a name="about"></a>
-<main role="main">
+    </main>
+<main role="main" class="container">
+      <div class="row">
+        <div class="col-md-8 blog-main">
+<div class="blog-post">
+            <h2 style="color: #ff6400" class="blog-post-title">1.1 версия</h2>
+            <p class="blog-post-meta">Декабрь 2021</p>
 
-      <section class="jumbotron text-center" style="background: rgba(52, 58, 64, .5);">
-        <div class="container">
-          <h1 class="jumbotron-heading" style="color: #ff6400">Немного о нас</h1>
-          <p class="lead text-light">Наша компания начала своё существование в июне 2021 года. Мы разрабатываем коллаборативных роботов, или "коботов", а также программное обеспечение для их работы. Основное наше направление - научные разработки и исследования, а не монетизация, по этому компания абсолютно независима и ведёт дружелюбную политику, благодаря чему вы можете повлиять на наше развитие.</p>
-        </div>
-      </section>
+            <p>Дополнение первой версии, исправлены баги, оптимизацирована память и алгоритм.</p>
 
-      <section class="jumbotron text-center" style="background: rgba(52, 58, 64, .5); color: white;">
-<div class="container">
-        <!-- Example row of columns -->
-        <div class="row">
-
-          <div class="col-md-4 border-right">
-            <h2>6 764</h2>
-            <p>Ссумарно написано более 6764 строк кода</p>
-          </div>
-          <div class="col-md-4 border-right">
-            <h2>910</h2>
-            <p>Если напечатать дорожку из символов всего написанного кода 14 шрифтом, её длинна будет почти километр (910,42 метра)</p>
-          </div>
-          <div class="col-md-4">
-            <h2>10</h2>
-            <p>Выпито около 10 литров кофе во время работы над проектом</p>
-          </div>
-        </div>
-
-        <hr>
-
-      </div>
-    </section>
-
-      <div class="album py-5" style="background: rgba(52, 58, 64, .5);">
-        <div class="container">
-
-          <h2 class="jumbotron-heading text-center mb-4" style="color: #ff6400">Для коботов предполагаются такие сценарии развития, как:</h2>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow bg-secondary">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="assets/img/about1.png" data-holder-rendered="true">
-                <div class="card-body">
-                  <h5 class="card-text text-light">Обучение детей алгоритмам и программированию</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow bg-secondary">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="assets/img/about2.png" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
-                <div class="card-body">
-                  <h5 class="card-text text-light">Изучение инженерного программирования в ВУЗах</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow bg-secondary">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="assets/img/about4.png" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
-                <div class="card-body">
-                  <h5 class="card-text text-light">Производственно-логистические решения</h5>
-                </div>
-              </div>
-            </div>
-
+            <h3>Что реализовано</h3>
+            <p>Следующие функции реализованы:</p>
+            <ul>
+              <li>Добавлена возможность управлять насадками кобота.</li>
+              <li>Оптимизирован код.</li>
+              <li>Добавлена функция паузы.</li>
+            </ul>
 
           </div>
-        </div>
-      </div>
+
+
+          <div class="blog-post">
+            <h2 style="color: #ff6400" class="blog-post-title">1.0 версия</h2>
+            <p class="blog-post-meta">Декабрь 2021</p>
+
+            <p>Первая версия прошивки со всеми минимальными возможностями.</p>
+
+            <h3>Что реализовано</h3>
+            <p>Следующие функции реализованы:</p>
+            <ul>
+              <li>Взаимодействие кобота с программым обеспечением.</li>
+              <li>Управление коботом в реальном времени.</li>
+              <li>Управление коботом с помощью системы контрольных точек.</li>
+              <li>Сигнализирование об ошибке через светодиодный интерфейс.</li>
+            </ul>
+
+          </div><!-- /.blog-post -->
+
+        </div><!-- /.blog-main -->
+
+        <aside class="col-md-4 blog-sidebar">
+          <div class="p-3 mb-3 rounded" style="background: rgba(52, 58, 64, .5);">
+            <h4 class="font-italic" style="color: #ff6400">О прошивке</h4>
+            <p class="mb-0">Программа QURO позволяет управлять коллаборативным роботом в реальном времени или создавать программу для кобота с помощью контрольных точек. </p>
+          </div>
+
+          <div class="p-3">
+            <h4 class="font-italic">Версии:</h4>
+            <ol class="list-unstyled mb-0">
+              <li><a href="https://disk.yandex.ru/d/f-qqGYvct5keYQ" style="color: #ff6400">1.1 Декабрь 2021</a></li>
+              <li><a href="https://disk.yandex.ru/d/Qi4_XP2Bh0GKaw" style="color: #ff6400">1.0 Декабрь 2021</a></li>
+            </ol>
+          </div>
+
+
+        </aside><!-- /.blog-sidebar -->
+
+      </div><!-- /.row -->
 
     </main>
-
-
-
-
-<a name="contact"></a>
-<footer class="container border-top pt-5 mt-5">
+</div>
+<footer class="container mt-5 pt-5 border-top">
       <div class="row">
         <div class="col-12 col-md">
           <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top mb-4" alt="">
@@ -264,15 +233,10 @@ body {
 
       </div>
     </footer>
-<!--#ff6400
-#0f0600
-#171717-->
-
-
-    <script>
-      var num = Math.ceil(Math.random() * 7)
+<script>
+  var num = Math.ceil(Math.random() * 7)
       document.body.background = 'assets/img/layer' + num + '.png'
-      document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('DOMContentLoaded', () => {
 
   const followCursor = () => { // объявляем функцию followCursor
     const el = document.querySelector('.follow-cursor') // ищем элемент, который будет следовать за курсором
@@ -294,54 +258,12 @@ body {
 
   followCursor() // вызываем функцию followCursor
 
-})
-      function writeTextByJS(id, text, speed){
-
-    var ele = document.getElementById(id),
-      txt = text.join("").split("");
-      var flag = true
-
-  var interval = setInterval(function(){
-
-      if(!txt[0]){
-      		const func = () => {
-
-          if(flag == true){
-            var txt1 = document.getElementById(id).innerHTML + "|"
-            flag = false
-            ele.innerHTML = txt1;
-          }
-          else if(flag == false){
-            var txt1 = document.getElementById(id).innerHTML.substr(0, 49)
-            flag = true
-            ele.innerHTML = txt1;
-          }
-};
-for (let i = 0; i < 14; i++) { // выведет 0, затем 1, затем 2
-  setTimeout(func, (i * 500));
-}
-            return clearInterval(interval);
-     };
-
-      ele.innerHTML += txt.shift();
-   }, speed != undefined ? speed : 90);
+})</script>
 
 
-
-
-return false;
-};
-
-writeTextByJS(
-  "demo",
-   [
-       "Производственная и образовательная робототехника."
-    ]
-);
-</script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://daruse.ru/assets/js/snowfall.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://daruse.ru/assets/js/snowfall.js"></script>
 <script type="text/javascript">
    $(document).snowfall({
             flakeCount: 300,
@@ -350,9 +272,11 @@ writeTextByJS(
             round: true,
             shadow: false});
 </script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <div class="follow-cursor"></div>
+<div class="follow-cursor"></div>
   </body>
 </html>
+
+
+
