--- a/firmware.html
+++ b/firmware.html
@@ -131,7 +131,7 @@ body {
           <a class="dropdown-item  " style="color: #A9A9A9;"  href="PO.html">Загрузить ПО</a>
           <a class="dropdown-item disabled  " style="color: #A9A9A9;"  href="#">Документация к ПО</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item  " style="color: #A9A9A9;"  href="#">Дополнительное ПО</a>
+          <a class="dropdown-item  " style="color: #A9A9A9;"  href="firmware.html">Дополнительное ПО</a>
           <a class="dropdown-item " style="color: #A9A9A9;"  href="#"></a>
         </div>
       </li>
