--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ body {
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" style="color: #A9A9A9;"  href="PO.html">Загрузить ПО</a>
-          <a class="dropdown-item disabled" style="color: #A9A9A9;"  href="PO_doc.html">Документация к ПО</a>
+          <a class="dropdown-item" style="color: #A9A9A9;"  href="assets/files/doc.pdf">Документация к ПО</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item"  style="color: #A9A9A9;" href="firmware.html">Прошивка для кобота</a>
           <a class="dropdown-item"  style="color: #A9A9A9;" href="#"></a>
