--- a/PO.html
+++ b/PO.html
@@ -131,7 +131,7 @@ body {
           <a class="dropdown-item  " style="color: #A9A9A9;"  href="PO.html">Загрузить ПО</a>
           <a class="dropdown-item" style="color: #A9A9A9;"  href="assets/files/doc.pdf">Документация к ПО</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item  " style="color: #A9A9A9;"  href="firmware.html">Дополнительное ПО</a>
+          <a class="dropdown-item  " style="color: #A9A9A9;"  href="firmware.html">Прошивка кобота</a>
           <a class="dropdown-item " style="color: #A9A9A9;"  href="#"></a>
         </div>
       </li>
@@ -146,15 +146,27 @@ body {
       <div class="jumbotron" style="background: rgba(52, 58, 64, .5);">
         <h1 style="color: #ff6400">Последняя версия</h1>
         <p class="lead">Здесь можно загрузить установщик последней версии. Если Вам нужна более ранняя версия, смотрите ниже.»</p>
-        <a class="btn btn-lg btn-light" href="https://disk.yandex.ru/d/u1mnWix3Hja85w" role="button">Скачать ПО 1.0</a>
-          <p> </p>
-        <a class="btn btn-lg btn-dark text-secondary" href="https://disk.yandex.ru/d/Yxcog0eZjfXlcw" role="button">~ПРЕ-РЕЛИЗ~ Скачать ПО 1.1</a>
+        <a class="btn btn-lg btn-light" href="https://disk.yandex.ru/d/zBbkov_9iIOH_A" role="button">Скачать ПО 1.1</a>
       </div>
     </main>
 <main role="main" class="container">
       <div class="row">
         <div class="col-md-8 blog-main">
+          <div class="blog-post">
+            <h2 style="color: #ff6400" class="blog-post-title">1.1 версия</h2>
+            <p class="blog-post-meta">Январь 02, 2022</p>
 
+            <p>Крупное обновление версии 1.0.</p>
+
+            <h3>Что реализовано</h3>
+            <p>Следующие функции реализованы:</p>
+            <ul>
+              <li>Темная тема реализована во всех окнах приложения.</li>
+              <li>Документация корректна.</li>
+              <li>Крупный багфикс.</li>
+            </ul>
+
+          </div><!-- /.blog-post -->
             <div class="blog-post text-dark">
             <h2 style="color: #602600" class="blog-post-title">1.1 версия ~ПРЕ-РЕЛИЗ~</h2>
             <p class="blog-post-meta">Декабрь 19, 2021</p>
@@ -210,6 +222,7 @@ body {
           <div class="p-3">
             <h4 class="font-italic">Версии:</h4>
             <ol class="list-unstyled mb-0">
+              <li><a href="https://disk.yandex.ru/d/zBbkov_9iIOH_A" style="color: #ff6400">1.1 Январь 2022</a></li>
               <li><a href="https://disk.yandex.ru/d/Yxcog0eZjfXlcw" style="color: #ff6400">1.1 Декабрь 2021 ~ПРЕ-РЕЛИЗ~</a></li>
               <li><a href="https://disk.yandex.ru/d/u1mnWix3Hja85w" style="color: #ff6400">1.0 Декабрь 2021</a></li>
             </ol>
