--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body {
           <a class="dropdown-item" style="color: #A9A9A9;"  href="PO.html">Загрузить ПО</a>
           <a class="dropdown-item" style="color: #A9A9A9;"  href="assets/files/doc.pdf">Документация к ПО</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item"  style="color: #A9A9A9;" href="firmware.html">Прошивка для кобота</a>
+          <a class="dropdown-item"  style="color: #A9A9A9;" href="firmware.html">Прошивка кобота</a>
           <a class="dropdown-item"  style="color: #A9A9A9;" href="#"></a>
         </div>
       </li>
