--- a/index.html
+++ b/index.html
@@ -264,9 +264,12 @@ body {
 
       </div>
     </footer>
-    
-    <div id="radiobells_container"><a href="https://www.radiobells.com/" rel="nofollow" id="RP_link">Онлайн радио</a> #radiobells_script_hash</div><link href="https://www.radiobells.com/script/style.css" type="text/css" rel="stylesheet" /><script type="text/javascript">var rad_backcolor="#434242"; var rad_logo = "black"; var rad_autoplay = false; var rad_width = "responsive"; var rad_width_px = 330;var rad_stations =[['https://stream.zeno.fm/7w72va6s7k0uv','LoFi World','lofiworld']];</script><script type="text/javascript" src="https://www.radiobells.com/script/v2_1.js" charset="UTF-8"></script>
-<!--#ff6400
+    <div class="navbar-fixed-bottom row-fluid">
+      <div class="navbar-inner">
+          <div class="container">
+            <div id="radiobells_container"><a href="https://www.radiobells.com/" rel="nofollow" id="RP_link">Онлайн радио</a> #radiobells_script_hash</div><link href="https://www.radiobells.com/script/style.css" type="text/css" rel="stylesheet" /><script type="text/javascript">var rad_backcolor="#434242"; var rad_logo = "black"; var rad_autoplay = false; var rad_width = "responsive"; var rad_width_px = 330;var rad_stations =[['https://stream.zeno.fm/7w72va6s7k0uv','LoFi World','lofiworld']];</script><script type="text/javascript" src="https://www.radiobells.com/script/v2_1.js" charset="UTF-8"></script>
+<div><div><div>
+    <!--#ff6400
 #0f0600
 #171717-->
 
