--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ body {
     <div class="navbar-fixed-bottom row-fluid">
       <div class="navbar-inner">
           <div class="container">
-            <div id="radiobells_container"><a href="https://www.radiobells.com/" rel="nofollow" id="RP_link">Онлайн радио</a> #radiobells_script_hash</div><link href="https://www.radiobells.com/script/style.css" type="text/css" rel="stylesheet" /><script type="text/javascript">var rad_backcolor="#434242"; var rad_logo = "black"; var rad_autoplay = false; var rad_width = "responsive"; var rad_width_px = 330;var rad_stations =[['https://stream.zeno.fm/7w72va6s7k0uv','LoFi World','lofiworld']];</script><script type="text/javascript" src="https://www.radiobells.com/script/v2_1.js" charset="UTF-8"></script>
-<div><div><div></footer>
+            <div id="radiobells_container"><a href="https://www.radiobells.com/" rel="nofollow" id="RP_link">Онлайн радио</a> #radiobells_script_hash</div><link href="https://www.radiobells.com/script/style.css" type="text/css" rel="stylesheet" /><script type="text/javascript">var rad_backcolor="#434242"; var rad_logo = "white"; var rad_autoplay = true; var rad_width = "responsive"; var rad_width_px = 330;var rad_stations =[['https://stream.zeno.fm/7w72va6s7k0uv','LoFi World','lofiworld'],['https://listen5.myradio24.com/atmo','Lounge Радио Атмосфера','loungeatmosfera'],['https://stream.vyshka24.ru/wowchillout','Wow Music: Chillout','wowmusicchillout'],['https://listen2.myradio24.com/8795','ChilloutFM','chilloutfm'],['https://eapps-cs.herokuapp.com/http://radio.enigmatic.su:4020/stream','SolarFlow Radio | Chill Waves','solarflowradio'],['https://radio4.cdm-radio.com:18020/stream-mp3-Chill','Costa Del Mar: Chillout','costadelmarchillout']];</script><script type="text/javascript" src="https://www.radiobells.com/script/v2_1.js" charset="UTF-8"></script>
+            <div><div><div></footer>
     <!--#ff6400
 #0f0600
 #171717-->
