--- a/index.html
+++ b/index.html
@@ -350,9 +350,10 @@ writeTextByJS(
 <script src="https://daruse.ru/assets/js/snowfall.js"></script>
 <script type="text/javascript">
    $(document).snowfall({
-            flakeCount: 300,
-            minSize: 1,
-            maxSize:6,
+            flakeCount: 5,
+            minSize: 10,
+            maxSize:50,
+            image :"assets/img/nicolas.png",
             round: true,
             shadow: false});
 </script>
